--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,11 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+# Proxy settings for the author. If you want to dev the mod, please delete the below 4 lines.
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=10809
+systemProp.https.proxyHost=127.0.0.1
+systemProp.https.proxyPort=10809
 
 # The Minecraft version must agree with the Forge version to get a valid artifact
 minecraft_version=1.20
