--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ minecraft {
     // Simply re-run your setup task after changing the mappings to update your workspace.
     mappings channel: mapping_channel, version: mapping_version
 
+    // Access Transformers
+    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+
     // When true, this property will have all Eclipse/IntelliJ IDEA run configurations run the "prepareX" task for the given run configuration before launching the game.
     // enableEclipsePrepareRuns = true
     // enableIdeaPrepareRuns = true
