--- a/gradle.properties
+++ b/gradle.properties
@@ -55,4 +55,4 @@ mod_group_id=com.apeng
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=A_Peng215
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=
+mod_description=A mod which helps you tune note blocks.
